基金学习笔记更新

--- a/前端性能优化汇总/性能优化笔记总结.md
+++ b/前端性能优化汇总/性能优化笔记总结.md
@@ -101,8 +101,8 @@ top bottom left right position float clear
 
 ###### 为chrome创建图层的条件
 - 3D或透视变换（perspective transform）CSS属性
-- 使用加速视频解码的<video> 节点
-- 拥有3D（webGL）上下文或加速的2D上下文的<canvas>节点
+- 使用加速视频解码的\<video> 节点
+- 拥有3D（webGL）上下文或加速的2D上下文的\<canvas>节点
 - 混合插件（如Flash）
 - 对自己的opacity做CSS动画或使用一个动画webkit变换的元素
 - 拥有加速CSS过滤器的元素
@@ -260,4 +260,7 @@ etag: W/"5715dcfb-171b"
   4、会话阶段的缓存，当 session 终止时，缓存也随之释放。
 
 
->如果大佬您想继续探讨或者学习更多知识，欢迎去这篇文章的github上提issues,也欢迎加入QQ或者微信一起探讨：854280588![QQ.png](https://upload-images.jianshu.io/upload_images/9590646-b7730844fa9df19d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)![微信](https://upload-images.jianshu.io/upload_images/9590646-d529498c10973856.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+  ##### 关于性能优化还有很多地方，这篇文章也会持续总结补充中，因为对于性能优化不是一个功能问题的解决，而是一场持续需要跟进的工程，并不存在一键修复按钮，只有深入了解浏览器背后运行原理并选择最佳的方式优化的方法。希望本文能给你带来收获。
+
+
+>如果大佬您想继续探讨或者学习更多知识，欢迎去这篇文章的[github](https://github.com/FANZHETWO/The-road-of-writing/blob/master/%E5%89%8D%E7%AB%AF%E6%80%A7%E8%83%BD%E4%BC%98%E5%8C%96%E6%B1%87%E6%80%BB/%E6%80%A7%E8%83%BD%E4%BC%98%E5%8C%96%E7%AC%94%E8%AE%B0%E6%80%BB%E7%BB%93.md)上提issues,也欢迎加入QQ或者微信一起探讨：854280588![QQ.png](https://upload-images.jianshu.io/upload_images/9590646-b7730844fa9df19d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)![微信](https://upload-images.jianshu.io/upload_images/9590646-d529498c10973856.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
