--- a/读书笔记/基金投资学习笔记.md
+++ b/读书笔记/基金投资学习笔记.md
@@ -53,3 +53,49 @@
 由专业团队来帮你投资，省心又省力
 
 能选择不同种类的债券进行分散投资，降低风险，获得比较稳定的收益
+
+
+### 混合型基金
+
+投资选择多，即同时配置股票、债券、货币、配置比例灵活，间接实现了分散投资，降低了风险
+
+
+**筛选标准**
+- 基金的业绩
+  成立时间越长，收益率的 有效性就越大，总收益率当然也是需要衡量的一个指标
+- 基金规模
+  规模 不易过大也不易太小，太小风险比较大，太大基金趋于保守。建议是2-100亿
+- 基金成立时间
+- 资产配置比例
+  投资风险和收益主要取决于股票与债券配置比例的大小，股票占比比较高，风险和收益也较高，债券占比高，风险和收益就较低
+- 基金公司盈利能力
+  看在同类中排名以及进几年和几个月的盈利能力
+- 基金经理选股时能力
+  同样的，跟换频率越少一般是越好的
+- 手续费
+ 其实一般如果盈利能力强，手续费一般不会很低
+
+ ### 股票型基金 
+
+ **混合和股票筛选七法则**
+
+ 1、 基金业绩越强越好
+ 2、基金规模在2-100亿比较好
+ 3、基金成立时间3年以上
+ 4、基金公司盈利能力越强越好
+ 5、基金经理更换频率越少越好，基金经理选股时能力仅作为排除指标
+ 6、手续费越低越好
+ 7、资产配置比例是混合基金筛选的核心，股票基金不用考虑此指标
+
+ **筛选小锦囊**
+在熊市里表现很烂但牛市表现强于大盘的基金要慎重
+
+#### 根据投资方式的不同， 基金可分为主动型基金和被动型基金
+
+**主动型基金**
+
+> 基金经理拿户主的钱替户主投资，投资 哪家公司的股票、债券、都是基金经理说了算，主动出击，寻求超越平均水准的超值回报。
+
+**被动型基金**
+
+> 基金经理不主动寻求超越市场的表现，一般选取特定的指数成分股作为投资对象，试图复制指数的表现，又叫指数基金。
