--- a/读书笔记/基金投资学习笔记.md
+++ b/读书笔记/基金投资学习笔记.md
@@ -99,3 +99,86 @@
 **被动型基金**
 
 > 基金经理不主动寻求超越市场的表现，一般选取特定的指数成分股作为投资对象，试图复制指数的表现，又叫指数基金。
+
+
+### 指数基金
+
+**概念**
+ > 指数基金，指的是跟踪特定的指数，并按照这个指数 成分股的比例，买入同样的股票组合的基金。
+
+**指数是什么**
+
+其实就是一个选股规则，它是按照某个规则挑选出一篮子股票，并由专业机构通过复杂的计算后算出这一篮子股票的平均价格，然后用来反映市场上这一类股票的价格水平，。我们把这个平均价格称为指数点位，放在这个篮子里的这些股票，我们会称他们是这只指数的成分股。
+
+#### A股
+> 就是人民币普通股，是由 中国境内公司发行，供境内机构，组织，个人以人民币认购和交易的普通股票。简单地把它理解为国内股票市场。
+
+**主要有5只指数**
+
+- 上证50指数
+  > 由上海证券市场规模大、流动性好的最具代表性的50只股票组成
+
+- 沪深300指数
+   > 从上海和深圳两个交易所挑出来的市值排名前300上市公司所组成的指数。国内影响力大，最重要的指数。
+
+- 中证500指数
+  > 沪市和深市中排名 300 - 800 组成的指数，代表中国股市中小型上市公司的平均水平
+
+- 创业板指数
+  > 专门选择在创业板上市的小型企业。 公司规模不大，盈利也不够，被主板上市的门槛挡在外面。
+
+- 红利指数
+  > 由高分红的 企业组成的指数， 挑选的是上证交易所过去两年现金分红最高，市值最大，流动性最好的50家公司。是上证A股市场真正的核心优质资产。
+
+#### 美国和香港市场
+
+**标普500指数**
+
+**纳斯达克指数**
+> 涵盖了纳斯达克市场上上市的所有美国和外国 的公司，是证券市场上非常有影响力的一只指数。
+
+**恒生指数**
+> 诞生于1964年，是从港股上市公司中选择50家具有代表性的公司股票组成的指数，是香港股市价格非常重要的指标，也是一个老牌优秀的指数，相当于上证50
+
+**H股指数**
+> 被称作恒生中国企业指数或国企指数，它挑选了在香港上市的规模最大的33家国内企业。
+
+**QDII**
+> 又称为合格的境内投资者，简单的理解，就是我们可以用人民币投资海外股票市场。
+
+
+#####指数基金的分类
+
+**宽指数基金**
+> 选股是不限制行业，比如深户300 上证50，中证500，恒生指数，标准普尔500，纳斯达克100
+
+**行业指数基金**
+
+> 会要求只投资哪些行业的股票 比如上证消费80 中证消费指数；代表医疗行业的中证医疗指数和代表白酒行业的中证白酒指数等等
+
+  按复制方式
+
+  **完全复制型指数基金**
+  > 完全复制目标指数所包含的所有成分股，照葫芦画瓢，追求的是获得和跟踪指数持平的收益
+
+  **增强型指数基金**
+  > 除了复制目标指数外，基金经理还加入了自己一些主观投资，追求超过跟踪的指数的收益
+
+  *小提示*
+    选择指数基金其实就是看中它的被动性，既然不用思考就能获得与市场持平的收益，干嘛还要选择需要人操心的增强型基金。
+
+    ####　指数基金的优点
+
+    －　灭绝人性
+    人性的弱点，有人的地方就是风险
+
+    －　永垂不朽
+　　铁打的指数，流水的公司
+
+　　－　笑到最后
+    　长期看来，只要经济是持续向好，指数基金就有投资的价值
+
+    ##### 指数基金的风险
+    1、 指数基金本质是股票型基金，它依然存在风险
+    2、虽然指数基金是复制和跟踪指数，来调整篮子里面的股票组合。但是基金经理如果复制得有偏差 ,或者没有及时跟着指数基金调整，也会带来收益方面的误差风险。
+    3、选择的指数基金规模小或者运作历史不长的话，也会有风险
