--- a/读书笔记/基金投资学习笔记.md
+++ b/读书笔记/基金投资学习笔记.md
@@ -181,4 +181,76 @@
     ##### 指数基金的风险
     1、 指数基金本质是股票型基金，它依然存在风险
     2、虽然指数基金是复制和跟踪指数，来调整篮子里面的股票组合。但是基金经理如果复制得有偏差 ,或者没有及时跟着指数基金调整，也会带来收益方面的误差风险。
-    3、选择的指数基金规模小或者运作历史不长的话，也会有风险
+    3、选择的指数基金规模小或者运作历史不长的话，也会有风险 
+
+#### 怎么选指数基金
+
+第一步：确定想要投资的指数
+> 对于大多数投资者来说，选择一个代表性强、主流的指数即可。只要指数本身是长期向上，就可以纳入投资范围。选择指数还可以结合自己的偏好或根据收益预期来决定。 
+
+**小建议**
+如果想获得市场平均收益，就可以选择代表A股的沪深300指数，建议最好选择宽基指数
+
+第二步： 精选基金公司
+> 基金公司的实力对指数基金的表现起着至关重要的作用。公司规模是一个重要的衡量标准，目前国内一般基金规模超过1000亿的基金公司实力都不可小觑。就像买东西买大牌一样。
+
+第三步：锁定指数基金
+
+1、 跟踪误差小
+> 指数基金的投资目标就是为了完全复制指数，获得一个和指数一样的投资收益，那么判断一个指数基金的好坏，关键并不是看它的收益率，而是跟踪误差率，误差率低说明基金运作水平高。
+
+2、基金规模大
+> 规模越大，流动性越强的基金越好。一个指数基金规模较小，清盘的概率就比较大。
+
+3、成立年限长
+> 最好选择超过3年的，小于1年的不要考虑
+
+4、费用成本低
+  费用包括管理费、托管费、申购费、赎回费，虽然大部分的基金费用为2%-3%，看起来也不是很大，但是在长期复利的威力下，就会对投资收益产生很大的影响。
+
+  *tip*
+> 因为申购赎回各个基金的差别不大，而且不同的购买平台优惠力度不同，没有可比性，因此这里只须比较管理费、托管费的总费用
+
+> 无论是跟踪误差率、规模还是费率的大小、多少、都必须是与同类基金相比较而得出的结果，并没有一个绝对的区间。
+
+#### 哪些不靠谱的指标
+
+一、大盘点数
+- 不准确，指数是长期向上的。
+- 不同的指数不好对比。又的指数几万点是低估，有些指数5000点是高估
+
+二、看市盈率PE
+
+指标体现的是这笔投资到底要花多久时间才能拿回来，计算公式=市值/净利润。 市盈率越低，公司越便宜，市盈率越高，公司越贵，但不能作为唯一指标
+
+这一指标的优点是快速有效，但是缺点也明显：
+1、不同的国家地区，不同的指数，估值的波动区间不一样
+2、就算在同一国家或地区来看，不同的行业市盈率各有不同，也没有可比性，而且就算又得市盈率低也并非就是好事
+
+三、看市净率PB
+
+市净率=市值/净资产，市净率体现的是公司的净资产是否被低估。
+PB数值越低，公司越低估，股票越值得投资。但这个重要数据，跟市盈率指标一样，不能做唯一标准。比如对于一些轻资产的公司，他不需要投入太多的资产就能获取更多的利润。
+
+
+####  指数稳定 市场的风向标
+
+0-10度 股票市场萎靡不振，一直在地位盘亘。这个时候是最佳的买入时机。
+
+10-20度之间，这个时候股票市场已经逐步企稳，蓄势待发中，认识买入良机；
+
+20-30度之间，股票市场一切欣欣向荣，可以继续买入
+
+30-40度之间，市场气氛热烈，可继续持有，但需堤防风险
+
+40-50度之间，高温预警，可考虑逐步卖出
+
+当温度大于90度，水都快要沸腾了。
+
+**计算原理**
+
+判断商品贵不贵的衡量标准是价格，而判断指数是否便宜的衡量标准则是估值。
+
+这个估值包含了市盈率和市净率两个指标。通过计算这两个指标的温度，然后计算出(PE温度+PB温度)/2,得出的就是这个指数的温度。
+
+例子： 当指数温度是20度时，说明历史中，估值低于当前估值的概率只有20%，现在的指数比较低估，适合买入，而当指数温度是80度时，说明在历史中，估值低于当前估值的概率高达80%，现在的指数就高估了，应该卖出。
