--- a/读书笔记/基金投资学习笔记.md
+++ b/读书笔记/基金投资学习笔记.md
@@ -254,3 +254,97 @@ PB数值越低，公司越低估，股票越值得投资。但这个重要数据
 这个估值包含了市盈率和市净率两个指标。通过计算这两个指标的温度，然后计算出(PE温度+PB温度)/2,得出的就是这个指数的温度。
 
 例子： 当指数温度是20度时，说明历史中，估值低于当前估值的概率只有20%，现在的指数比较低估，适合买入，而当指数温度是80度时，说明在历史中，估值低于当前估值的概率高达80%，现在的指数就高估了，应该卖出。
+
+#### 常见的基金投资方式
+
+- 一次性投资
+简单省事、可以无脑操作的买入姿势
+
+缺点很明显：子弹一下子打完了，再有低价格就只能瞪眼了。
+
+- 不定期投资
+
+需要择时投入，找到合适时机才下手买入。
+缺点：这种投资方式会受到主观情绪的极大干扰，遇到市场暴跌暴涨的时候，很容易心态不稳情绪失控，从而影响到自己的决策；不定期投资因为它的难度和时间不确定性，一般不像定投那样更能长期坚持。
+
+- 定期定额投资
+
+固定时间固定金额，属于定投基本款
+
+优点：简单粗暴不费脑
+缺点：无论价格高低都买入固定金额的方法，会使得收益打折扣，不能高效利用资金。
+
+- 定期不定额投资
+
+时间固定但投资金额不固定，投资金额根据基金的估值高低进行调整。
+优点：主动的做到了便宜的时候多买点，贵的时候少买点甚至不买，在基金便宜额时候就能买到更多的基金份额。
+
+####　基金投资的买入路径
+
+- 场内交易
+  
+- 场外交易
+  
+  1、交易渠道不同
+
+  场内： 必须在证券公司的交易系统里下单买卖，证券公司也就是俗称的券商。
+  场外：通过银行柜台、网银、基金公司网站
+
+  2、交易费率不同
+ 场内： 买入或卖出单向交易费率最高不超过0.05%，现在很多券商都能做到万分之三，少部分券商秩序每笔万分之一，且没有5元起点的限制。
+
+场外：交易申购费率一般未0.6%-1.5%.费率 千分之六
+
+3、委托方式不同
+
+场内：委托方式就是“买入卖出”，就是在证券市场上跟想要买卖的人直接交易
+场外：交易委托方式是“申购赎回”。申购基金，实际上就是向基金公司申请购买新的基金份额；赎回基金，就是向基金公司申请卖出户主手机的基金份额，给户主现金。
+
+
+区别 | 场内 | 场外
+----------------------
+1、交易渠道| 证券公司的交易系统 | 银行柜台、网银、基金公司网站等平台
+2、交易费率 | 单向交易费率不超过0.05% | 申购费率0.6-1.5% 赎回费率0.5%
+3、委托方式| 买入卖出 | 申购赎回
+4、到账时间| 当天到账，下一个交易日可提现| 2到4个工作日到账
+5、交易价格| 实时交易价 | 当天基金净值
+6、分红方式 | 现金分红 | 现金分红和红利再投资
+7、定投设定 | 手动定投 | 可设置自动定投
+
+
+#### 定投小tips 
+
+1、给定投日设置提醒
+> 定投的意义就在于定期不定额的投入，如果坚持3个月，忘记5个月，那就没有任何意义了。
+
+2、不加入主观臆断
+> 在投资的过程中，不管是投资什么，最重要的事情就是一定要遵守投资纪律，克服人性中贪婪和恐惧的弱点。
+
+3、收益投入再利用
+> 赚到的钱千万不要随便用掉，而是应该作为投资本金继续来投资。
+
+
+#### 确定每月投资的金额
+
+首先第一步确认自己有多少存款。如果没有存款那么先确定下自己每个月的日常支出最少多少，比如我每个月要4000 的支出，那么应急金得具备3-6个月，我们折中一下，那么至少存款得有16000，先把这些钱存到位再来做投资计划。
+
+第二步确认每月的增量资金   每月增量资金 = 每月工资- 日常基本开支-  商业保险/12  - 未知开销
+
+这个要是恋爱中的人就会多一项不确定开销了。
+
+
+第三步 确认自己的风险系数  自己的风险系数 = 100 - 你的年龄
+
+如果你相对保守，可以把100替换成80；如果你觉得可以承担更大的风险，也可以把100调到110。
+
+确定每月投资金额：
+
+（每月存量资金 + 每月增量资金）*风险系数 = 每月投资金额
+
+####　根据指数温度进行定投
+
+价值投资的基本原理：　在便宜的时候买入投资品，在贵的时候卖出，这样才能降低投资风险，稳定的获取投资收益。指数温度就是衡量某只指数基金是贵还是便宜的量化指标。
+
+
+
+
