简投四步走

--- a/读书笔记/基金投资学习笔记.md
+++ b/读书笔记/基金投资学习笔记.md
@@ -302,7 +302,7 @@ PB数值越低，公司越低估，股票越值得投资。但这个重要数据
 
 
 区别 | 场内 | 场外
-----------------------
+| :----: | :----: |:----: |
 1、交易渠道| 证券公司的交易系统 | 银行柜台、网银、基金公司网站等平台
 2、交易费率 | 单向交易费率不超过0.05% | 申购费率0.6-1.5% 赎回费率0.5%
 3、委托方式| 买入卖出 | 申购赎回
@@ -345,6 +345,41 @@ PB数值越低，公司越低估，股票越值得投资。但这个重要数据
 
 价值投资的基本原理：　在便宜的时候买入投资品，在贵的时候卖出，这样才能降低投资风险，稳定的获取投资收益。指数温度就是衡量某只指数基金是贵还是便宜的量化指标。
 
+#####  如何根据指数温度实现定期不定额投资
+
+| 买入 | 指数温度| 投资基数 | 当月投资比例| 当月投资金额
+| :----: | :----: |:----: |:----: |:----: |
+|        |  0-10 |   x        | 100%    |        x 
+|        |  10-20 |   x        | 80%    |       80%* x 
+|        |  20-25 |   x        | 60%    |       60%* x 
+|        |  25-30 |   x        | 50%    |       50%* x 
+|        |  30-40 | 停止投资，持有 
+
+| 卖出  |  指数温度 |  现有該基金总份额 | 当月卖出比例 | 当月卖出金额
+| :----: | :----: |:----: |:----: |:----: |
+|       | 40 -50   |   A             | 50%          | 50%*A
+|       | 50以上    |                 | 剩余的全部卖出
+
+**例子**
+定投首月  中证500温度：19.8   投资基数 x = 2662 ；当月买入指数基金 = 2662 *80% = 2130   当月存入货币基金 = 2662- 2130 = 532
+
+定投次月 温度上升到21度  当月买入指数基金 = 2662 *60% = 1598   当月存入货币基金 = 2662- 1598 = 1064
+
+定投某月  温度降到0-10度  某月买入 =  2662 + N + 1064+532 。。。
 
 
+####　指数切换
 
+当出现另一只指数温度低于当前指数２度以上的时候，我们就要迅速把这只指数对应的基金揽入怀中，重复上面的买入策略。
+
+××注意××
+
+切换的温度２度是建议的量化指标，要是平时比较忙，也可以把切换的量化指标定位５度。
+
+
+#### 总结 简投法四步骤
+
+1、计算有目标时或者没有计划时的每月的投资基数
+2、根据指数温度确定我们要投资的指数基金
+3、根据指数温度，确定买入卖出策略
+4、当出现另一只指数温度低于当前指数温度2度以上时，从温度高的指数切换到温度低的指数，买入更低的指数基金提高我们的收益率，待所有指数温度都高时再分批卖出。卖出后得到的钱，作为存量资金，待市场降温出现投资机会后，继续按照以上四步开启下一轮投资。
