--- a/typescript学习笔记/知识点总结.md
+++ b/typescript学习笔记/知识点总结.md
@@ -1,2 +1,162 @@
 #### 什么是TypeScript
 ts是js的一个超集，主要提供了类型系统和对ES6的支持。有Microsoft开发。
+
+
+### 原始数据类型
+
+JS 类型分为两种：原始数据类型(Primitive data types)和对象类型（Object types）.
+
+原始数据类型包括：布尔值、数值、字符串、null、undefined 以及ES6中的新类型Symbol.
+
+#### 布尔值
+
+> 布尔值是最基础的数据类型，在TS中，使用boolean定义布尔值类型：
+
+```
+let isDone: boolean = false;
+```
+**注意** 使用构造函数Boolean创造的对象不是布尔值
+
+```
+let createByNewBoolean: boolean = new Boolean(1)//事实上 new Boolean() 返回的是一个 Boolean 对象：
+```
+直接调用 Boolean 也可以返回一个 boolean 类型:
+```
+let createdByBoolean: boolean = Boolean(1);
+```
+在 TypeScript 中，boolean 是 JavaScript 中的基本类型，而 Boolean 是 JavaScript 中的构造函数。其他基本类型（除了 null 和 undefined）一样，不再赘述。
+
+
+#### 数值
+
+使用number定义数值类型：
+```
+let decLiteral:number = 6;
+
+let hexLiteral:number = 0xf00d
+```
+#### 数组
+两种方式可以定义数组。
+第一种，可以在元素类型后面接上[],表示由此类型元素组成的一个数组：
+```
+let list:number[] = [1,2.3]
+```
+第二种方式使用数组泛型
+```
+let list:Array<number> = [1,2,3]
+```
+#### 元组 Tuple
+
+元组类型允许表示一个已知元素数量和类型的数组，各元素的类型不必相同。比如，你可以定义一对值分别为string 和number类型的元组。
+
+```
+// declare a tuple type
+let x:[string,number];
+// Initialize it
+x = ['hello',10];
+//Initialize it incorrectly
+x = [10,'hello']
+```
+
+#### 字符串
+
+使用string 定义字符串类型：
+
+```
+let myName:string = 'TOM'
+let myAge:number = 25;
+
+let sentence:string = `hello,my name is ${myName}`
+
+```
+
+#### 空值
+
+JS 没有空值（Void）的概念，在TS中，可以用viod 表示没有任何返回值的函数：
+
+```
+function alerName():void {
+    alert('nothing')
+}
+```
+申明一个vois类型的变量没有什么用，因为你只能将它赋值为undefined和null;
+```
+let unusable:void = undefined;
+```
+
+#### Null 和 Undefined
+
+在TS中，可以使用null和undefined 来定义这两个原始数据类型：
+```
+let u:undefined =  undefined;
+let n:null = null;
+```
+与void的区别是，undefined和null是所有类型的子类型。也就是说undefined类型的变量，可以赋值给number类型的变量
+
+```
+//这样不会报错
+let num:number = undefined;
+```
+```
+//这样也不会报错
+let u:undefined;
+let num:number = u;
+```
+**而void类型的变量不能赋值给number类型的变量**
+```
+let u:void;
+let num:number = u
+// Type 'void' is not assignable to type 'number'.
+```
+#### Never
+never 类型表示的是那些永不存在的值的类型。例如，never类型是那些总是会抛出异常或根本就不会有返回值的函数表达式或箭头函数表达式的返回值类型；变量也可能是never类型，当它们被永不为真的类型保护所约束时。
+
+#### Object
+object表示非原始类型，也就是除了number,string.boolean,symbol,null或undefined之外的类型
+使用object类型，就可以更好的表示像Object.create这样的API.
+
+
+
+### 任意值
+任意值（Any）用来表示允许赋值为任意类型
+
+#### 什么是任意值类型
+如果是一个普通类型，在赋值过程中改变类型是不被允许的：
+
+```
+let myFavoriteNumber: string = 'seven';
+myFavoriteNumber = 6;
+```
+但如果是any类型，则允许被赋值为任意类型
+```
+let myFavoriteNumber: any = 'seven';
+myFavoriteNumber = 6;
+```
+
+在任意值上访问任何属性都是允许的：可以认为，声明一个变量为任意值之后，对它的任何操作，返回的内容的类型都是任意值。
+
+在对现有代码进行改写的时候，any类型是十分有用的，它允许你在编译时可选择地包含或移除类型检查。你可能认为object有相似的作用，就像它在其他语言中那样。但是object类型的变量只是允许你给它赋值任意值-但是却不能够在它上面调用任意的方法，即便它真的有这些方法：
+
+####　未声明类型的变量
+
+变量如果在声明的时候，未指定其类型，那么它会被识别为任意值类型:
+```
+let something;
+something = 'seven';
+something = 7;
+
+something.setName('Tom');
+
+```
+等价于
+```
+let something: any;
+something = 'seven';
+something = 7;
+
+something.setName('Tom')
+
+```
+
+### 接口
+TS的核心原则之一是对所具有的结构进行类型检查。它有时被称为做“鸭式辩型法”或“结构性子类型化”。在TS里，接口的作用就是为这些类型命名和为你的代码或第三方代码定义契约。
