--- a/读书笔记/基金投资学习笔记.md
+++ b/读书笔记/基金投资学习笔记.md
@@ -383,3 +383,103 @@ PB数值越低，公司越低估，股票越值得投资。但这个重要数据
 2、根据指数温度确定我们要投资的指数基金
 3、根据指数温度，确定买入卖出策略
 4、当出现另一只指数温度低于当前指数温度2度以上时，从温度高的指数切换到温度低的指数，买入更低的指数基金提高我们的收益率，待所有指数温度都高时再分批卖出。卖出后得到的钱，作为存量资金，待市场降温出现投资机会后，继续按照以上四步开启下一轮投资。
+
+
+####　场内基金和场外基金的区别
+
+｜　－　｜场内基金　｜　场外基金
+| :----: | :----: |:----: 
+｜买入方式｜使用股票账户进行买卖　｜使用支付宝等第三方平台进行申购赎回
+｜扣款渠道｜　通过银证转账划到股票账户　｜　直接从银行卡扣款
+｜买入费率　｜　第二天去交割查询中查询　｜　在申购时就表明了费率，一般是打一折
+｜成交价格　｜　委托价格成交　｜　当天收盘后算到的净值来成交
+｜成交时间　｜　如果当天的价格可以成交，那么当天就能有持仓｜　场外申购时，需要第二个交易日才能成交
+｜卖出到账　｜　当天回款到股票账户，可以继续买基金，如果需要提现，那么第二个交易日可以提现　｜　第二个交易日才会卖出成功，钱直接到银行卡中
+
+
+#### 典型的心里误区
+
+#####　不自信心里：我钱太少，不适合投资
+
+**鹅太小，不适合投资**
+>不积跬步无以至千里，不积小流无以成江河，越是钱少，越是要早日学理财。种一棵苹果树最好的时间是十年前，其次是现在。
+
+**缺乏开源节流和长期规划的投资意识**
+> 控制自己不合理的消费是第一步，第二步是努力养肥自己的鹅，创造更多的现金流，然后把这些现金源源不断的投入理财中去，经过时间的发酵，雪球越滚越大，体验复利的威力。
+
+##### 赌博心里: 我想把所有的钱全部用来投资，以赚取更多的钱
+
+**违背了基金投资的两个重要的原则之一---- 闲钱**
+> 投资之前一定要先搞清楚自己的收入和消费状况，留足三个月以上的生活备用金和商业保险，剩余的钱才能拿来投资。
+- 善用手机上的记账APP
+- 分类几张更清晰
+- 定时记账不遗忘
+
+**没有重视资产配置**
+> 在投资前可以先进行风险能力测试，明白自己的底线，底线是万万不可碰触的，绝对不能把所有钱都拿来投资；做好备用资金和投资资金的合理分配，留存充足的备用金，只用自己可以承受的资金来投资。
+
+##### 投机心里：短期的波段操作，赚把钱就跑
+
+**违背了基金投资的两个重要原则之一----长期**
+> 转变投资观念和方式，从短期投机转变到长期投资。要记住股市变幻莫测，永远不要尝试着去预测，更不要去搞什么短信操作。
+
+##### 喜涨厌跌心理：希望股价一直上涨不要跌
+
+**喜欢上涨，厌恶下跌心理，简称喜涨厌跌心理**
+> 指数往往在牛市的时候估值虚高，熊市的时候估值低迷，所以阶段性的低估会提供很好的买入机会，在经济周期底部的时候，，买入一篮子低估的品种，然后耐心等待上行周期的到来，获取指数基金上涨带来的收益。
+
+##### 不知足心里：止盈早了感觉赚少了
+
+**没有很好的进行心里预期管理**
+> 进行心里预期管理。没人能预测股市，没有赚到的钱就是在自己能力范围之外的钱。做好自己定投计划，并坚持按照指数温度的策略买卖，赚自己能赚到的钱才是王道。
+
+##### 盲目从众心理：我的基金的盈利不如别人的股票，要不要换成股票？
+
+**盲目从众心理**
+> 只要能够坚持闲钱加长期原则，以及根据温度来进行定期不定额的策略，平均年华收益率15%-20%左右是没有问题的。股票投资确实能带来更高的收益，但跟基金一样，也是有很多原则和策略的，需要先进行系统学习才能开始实战。
+
+##### 最佳基金投资心里
+
+**高筑墙，广积粮，缓称王**
+
+高筑墙 - 寻找低温度指数基金
+广积粮 - 开源节流，养大下蛋的鹅
+缓称王 - 不急不躁，坐等财务增值，享受复利威力
+
+**做一名佛系投资者**
+> 指数基金长期内一定是向好的，但它什么时候跌什么时候涨都不受我们的控制，我们着急也没有用，我们唯一能做的就是努力工作赚钱，然后把更多的钱投到低温度的指数基金里，静静等待它上涨的时候带着我们更多的惊喜。
+
+
+#### 资产配置
+
+把资产按50-50的比例分配到股权类和债权类资产中，这是资产配置中最简单易操作的方法。
+
+对于普通投资者来说，股票和债券这两种投资需要的本钱不大，够亲民，虽各有优缺点，但他们互补的特性恰好可以为我们配置资产提供便利。
+
+#####　资产配置的特点
+
+**少亏**
+原理其实很明显，就是如果投资期间刚好遇见的是熊市，那么股票和债券的配置下就会亏损的少，然后回本的周期也会短一些。
+
+**少赚**
+如果熊市期间能够少亏，自然在牛市也会少赚一些。少赚一些是种很好的心态，因为人生路很长。
+
+####　升级资产配置
+
+**技巧一**
+
+股票类资产可以再细分成几个不同的指数类型
+
+如果想要获得更好的收益，同时更加分散风险，可以再将５０％的股权类资产按照指数基金的不同类型再细分
+
+可以通过配置大盘股基金和小盘股基金
+
+可以同时配置Ａ股和美股或者港股的指数基金
+
+行业指数基金的投资
+
+**技巧二**
+
+配置比例并非一成不变，随着投资水平的不断提高，我们可以在动态再平衡策略中加一些主动的因素
+
+当指数温度低时多配指数基金，而指数温度高时则多配债券，这个投资比例可以在70：30到30：70之间来回变化
