意外险学习

--- a/读书笔记/保险资料总结笔记.md
+++ b/读书笔记/保险资料总结笔记.md
@@ -119,3 +119,49 @@
 
 投资连结险：激进型、稳健型、保守型
 
+
+**买保险的原则： 保障全面 保额充足 保费适当**
+
+#### 意外险
+> 所谓意外险，全称是人身意外伤害保险，通俗来说，就是我们投保了意外险之后，如果在保鲜期间，因遭受意外伤害而导致死亡或残疾，就可以按照合同约定找保险公司获得相应的赔偿。
+
+意外险有两个基本要点：
+1、时间界定：合同有效期内发生的。保险责任期内认定
+2、责任界定：外来的，突发的，非本意的，非疾病的。
+
+
+##### 意外险的分类
+- 意外伤害死亡残疾保险
+   > 只保障意外伤害导致的死亡或残疾，所以一般去参加比较危险的活动或者出行，要买这个保险。
+
+- 意外伤害医疗保险
+  >意外伤害导致的医院治疗费，住院+津贴 这个特点在住院和津贴
+
+- 综合意外伤害保险
+  > 即对死亡或残疾赔付，也对医疗费用赔付。这个所涉及的范围就广一些。
+
+  -意外伤害收入保障保险
+ > 因意外带来的收入影响  
+
+
+#####　为什么我们要买意外险
+
+意外的概率时刻存在，我们每个人都有可能遇见，你要做的就是在不幸遇见后能够再次有保障的站起来，那么保险就能够给你提供一份这样的保障，意外险的保费不高，但是赔率却很高。
+
+##### 意外险的挑选原则
+
+原则1：保费的高低和年龄无关，和职业有关
+
+原则2：选择短期消费型意外险，优先选择承诺可以续保的产品
+
+原则3：保额最少50万
+
+##### 普通意外险的补充：
+1> 交通意外伤害险：
+乘坐交通工具时发生的意外才属于理赔范围
+
+费用便宜：
+
+
+2> 旅行意外险：
+保障在旅游途中因意外事故导致的伤残或死亡、境外医疗、航班取消、恶劣天气、自然灾害、政变、恐怖袭击。。
