--- a/读书笔记/保险资料总结笔记.md
+++ b/读书笔记/保险资料总结笔记.md
@@ -165,3 +165,54 @@
 
 2> 旅行意外险：
 保障在旅游途中因意外事故导致的伤残或死亡、境外医疗、航班取消、恶劣天气、自然灾害、政变、恐怖袭击。。
+
+
+####　重疾险
+
+> 有保险公司经办的以特定重大疾病，如恶性肿瘤、心肌梗死、脑溢血为保险对象。当被保人患有上述疾病时，由保险公司对所花医疗费用给予补偿的商业保险行为。
+
+**特点**：定额给付型---只要确诊，就一次性支付现金。
+
+哪些才算重大疾病？
+
+保险行业协会的规定的6种疾病：恶性肿瘤，急性心肌梗塞，脑中风后遗症，重大器官移植术，冠妝动脉搭桥术和终末期肾病。
+
+ 承保25种国家规定重疾和55种高发重疾
+
+#### 如何挑选合适的重疾险产品？
+
+原则1：经济状况允许，优先考虑终生型重疾险
+> 有些保险公司对于70岁以上的人一般都不会接受了，因为70岁以上就会有很高的风险，然后我们未来的生活水平，活到70岁以后，甚至更高的年龄都是很大概率的事情，所以提前吧终身型买好。当然前提是经济条件要好，不然费用承担下来还是很吃力的。
+
+原则2：一年期重疾险和长期定期重疾险，优先选择长期的---保证续保！
+> 两个方面原因：如果买的年龄比较大，要是买一年的，后期续保保险公司可能会拒绝。而且人都会有侥幸心里，要是一年一年买，结果发现买了几年然后身体没事，那么后面买保险的动力就不足了，这时候就会轻视保险的重要性。
+
+原则3：选择消费型重疾险，拒绝返还型重疾险
+> 羊毛出在羊身上，返还型必然是拿你的钱去投资，然后别人吃肉分你一点汤喝。当然你会说，自己也不会投资，每年的收益率还不如返还型利率高，那你还是选择返还型吧。然后，我们很简单的一算就知道了，要是自己的好好管理投资，只要每年收益率高于7%，那么二十年后，收益远远高于买返还型重疾险。
+
+原则4：保障疾病范围不是越多就一定越好
+> 范围越多，其实就意味着保费越高。其实我们平时一般重疾险25种疾病就足够了，其它的患上的情况几率很低，当然你要是经济条件好，自然买全一点也行。但是如果理性分析，就知道其实不是保障范围越多就一定越好。
+
+
+#### 看一款保险时需要关注哪些重点内容
+
+1、看保障范围：保什么疾病？  一般重大疾50种轻症足以
+
+2、看等待期：等待期内不理赔：主要是确认时间，这个都是保险公司决定的，自己心里要清楚。
+
+3、看保险利益：何种情况下获得什么保障？ 这方面内容一般看起来比较枯燥，但是我们还是要用心细心看好，这关系到以后的利益问题。
+
+4、看缴费年限：交多少年? 一般推荐年缴。然后选择30年最好。
+
+5：、最后，看责任免除。千万不能有侥幸心里隐瞒病情，一旦发现，将会是得不偿失的。
+
+#### 为什么要买医疗险
+
+医疗险是作为重疾险的补充，我们一般的生病其实是用不到重疾险的，但是出现了意外，虽然有社保报销，但是想用更好的药物，社保就顾及不到了，这时候医疗险就能有很好的补充。
+
+**特点**
+- 一年一买，保费随着年龄增加
+- 有些产品不会因被保人健康状况而不续保。
+- 一般都会有免赔额度1万元---意思就是一万以下不报销
+- 先社保报销，如果有社保但未使用，除去免赔额，保险公司赔偿60%费用
+- 等待期：一般都是30天。
