--- a/typescript学习笔记/知识点总结.md
+++ b/typescript学习笔记/知识点总结.md
@@ -160,3 +160,26 @@ something.setName('Tom')
 
 ### 接口
 TS的核心原则之一是对所具有的结构进行类型检查。它有时被称为做“鸭式辩型法”或“结构性子类型化”。在TS里，接口的作用就是为这些类型命名和为你的代码或第三方代码定义契约。
+
+###　tslint.json
+```
+{
+    "defaultSeverity": "error",
+    "extends": [
+        "tslint:recommended"
+    ],
+    "jsRules": {},
+    "rules": {
+        "quotemark": [false], //接口是否必须有分号
+        "semicolon": [false], //最后以分号结尾
+        "interface-name": [true, "never-prefix"], //接口定义字段第一个字母是否需要I 
+        "object-literal-sort-keys": [false] // 接口定义字段不需要按照首字母大小排序
+
+    },
+    "rulesDirectory": []
+}
+```
+
+### 泛型
+> 泛型是指在定义函数、接口或类的时候，不预先制定具体的类型，而在使用的时候在指定类型的一种特性。
+
