--- a/读书笔记/保险资料总结笔记.md
+++ b/读书笔记/保险资料总结笔记.md
@@ -216,3 +216,88 @@
 - 一般都会有免赔额度1万元---意思就是一万以下不报销
 - 先社保报销，如果有社保但未使用，除去免赔额，保险公司赔偿60%费用
 - 等待期：一般都是30天。
+
+
+### 寿险的作用和分类
+> 人寿保险，就是以被保险人的生命为保险对象的保险。
+被保险人在保险责任期内生存或者身故，由保险公司根据契约规定给付保险金。
+
+- 按保险责任分类：
+  1、定期寿险
+  2、终身寿险
+  3、两全寿险
+
+- 按保费/保额是否调整分类：
+  1、传统寿险
+  2、新型寿险
+    （1）分红险
+    （2）万能险
+    （3）投资连结险
+
+####　选寿险之前，需要明确的三件事
+
+##### 原则1：明确自己的需求，如果核心需求是保障，那就不考虑自带理财投资功能的保险。
+
+#####　原则２：优先家庭的经济支柱。
+> 如果父母年龄比较大了，买寿险其实不是很划算的，除非你的家庭条件比较好，一年多几万的开销也没事。不然多给买好重疾和意外，然后多体检就行。 小孩一般就不要买寿险了，小于十周岁的未成年人，以死亡为赔付条件的保险不得超过20万； 10-18周岁不得超过50万。这样规定是有一定的理由的，因为怕父母故意伤害孩子来骗取保费。也是对未成年人的法律保护。
+
+#### 寿险保额该买多少？
+
+首先我们要理解寿险的主要作用：**主要是预防家庭中主要经济支柱来源突然倒塌，一旦主要收入出现意外了，能够及时有补偿来救济家庭，毕竟一个家庭的构成，除了年轻人，还是老人和小孩。**所以以这个为出发点来估算寿险保额。
+
+寿险保额= 未来10年的支出+房贷余额-现有流动资产
+
+第一步：预估未来家庭10年必须的支出。
+
+1）每个月伙食费，物业费以及水电费用。
+2）孩子的教育支出，一般要承担到至少保障孩子完成大学本科的教育之前。
+
+第二步：计算家庭负债，可以用房贷余额来代替家庭负债。
+精确算法：
+房贷余额——车贷——其他负债代替房贷余额
+
+第三步：计算家庭支柱要承担的赡养责任，如果家庭支柱收入中断了，赡养费要留多少钱才够呢？
+
+第四步：把这些责任进行评估之后再减掉整个家庭现有所积累的流动资产（现金、货币基金、能够快速变现的骨片。。。）
+
+我的寿险保额 = 老人的赡养费用（24万）+给未婚妻的补偿（30万）-目前没有任何贷款-有几万的存款。 （那么这两年我的保费额度50万）
+
+
+
+名称 | 保险定义 | 特点
+| :----: | :----: |:----: |
+定期寿险| 合同期内，如果被保险人离世，则按照合同给付保险金，合同终止。 | 1、对一段时间内被保险人的死亡进行保障 2、不返还保费
+终身型保险| 被保险人在100岁之前离世，按照合同给付保险金，100岁之后，也按照合同给付保险金，合同终止。| 1、终身死亡保障
+两全型保险| 合同期内被保险人离世，按照合同给付保险金，合同终止；如果合同到期，按照合同约定返还保费，合同终止。 | 1、对生存和死亡都进行保障。2、按照约定返还保费
+
+
+**建议**
+1、经济条件允许的前提下还是选择终身型的比较好。
+
+2、先保障后理财，如果你的需求是保障，那就不建议考虑理财型寿险，也不建议考虑所谓带有保费增值功能的保险和两全型保险
+
+3、定期寿险和终身寿险，各有优势，至于如何选择，还是根据个人的需求、经济情况来综合考虑
+
+
+####  分红险、万能险、投资连结险 的区别
+
+名称 | 保险定义 | 特点
+| :----: | :----: |:----: |
+分红型保险| 保障账户和投资账户在一起，有保底收益，有分红收益 |分红收益不固定，由保险公司的收益决定
+万能险| 保障账户和投资账户分开，有保底收益| 投资有保底收益，缴费，保额调整，提取都比较灵活
+投资连结险| 保障账户和投资账户分开，没有保底收益 | 投资账户可以分开几个，可以根据自己的需求选择
+
+
+
+#### 保险的基本原则-回顾
+
+1、先保障后理财，先大人后小孩，优先经济支柱
+
+2、先搞定能够应对意外、疾病、死亡三大风险的保险产品，在考虑养老；多少资产匹配多少报废与保额，量力而行；保险组合有比没有强，有钱再提额。
+
+3、在预算充足的情况下，优先选择终身型产品
+
+
+我的保险规划额度
+
+重疾险（50万）  医疗险（100）  意外险（100） 寿险（100）
