--- a/简历以及面试技巧/转正报告.md
+++ b/简历以及面试技巧/转正报告.md
@@ -2,4 +2,22 @@
 
 【选择汇报内容】（以下内容不做强制要求汇报，也可根据自己的情况选择性的阐述一些内容）】1、个人优势及不足；2、如何更好更有效的跨部门沟通工作
 ###  关于甲方和乙方的故事
-  我的情况对比大部分可能特殊点，我是乙方转内的，转之前已经在客服项目组差不多工作两年，
+  >我的情况对比大部分可能特殊点，我是乙方转内的，转之前已经在客服项目组差不多工作两年，我接手那边的项目时，杰哥还没来，后来杰哥和海洋带着大部队过去客服支援，从此客服项目组就算成立了，在乙方的两年时间里特别要感谢杰哥对我技术的指导，能让我快速的成长起来，同时也要感谢海洋，能够信任的把一些管理的事情分配给我，让我有了除了coding 之外其他能够实践的机会。
+  
+- 乙方的职责
+  1、了解清楚项目和需求，高效高质量的产出。
+  2、合理规划好时间，专注于需求的实现（两耳不闻窗外事，一心只想coding）
+
+- 自从做了甲方
+  1、有了很多的评审会议要参加
+  2、被产品和业务以及UI追问着这个需求能不能实现
+  3、需要合理分配分解好手头上的工作以及攻克优化技术阻碍点
+  4、比较复杂的项目，需要写好设计文档
+  5、只有到了晚上才能安静下来coding不被打扰
+
+  ###　这半年我做的哪些内容
+  －　工程师端业务迭代开发很多需求，归总为一个业务目标就是让工程师操作更加规范和透明，让用户认可度和满意度得到提升。
+  －　重构了网点信息员和分中心两大模块，虽然没有原声那么好的体验，但是通过这样把各个模块整合起来，看起来更加完整，同时各个业务模块又是独占划分。
+  －　美的服务号的小程序开发，目前没有完全推广起来，待后面的厚积薄发。
+  
+　###  
