--- a/简历以及面试技巧/转正报告.md
+++ b/简历以及面试技巧/转正报告.md
@@ -16,8 +16,12 @@
   5、只有到了晚上才能安静下来coding不被打扰
 
   ###　这半年我做的哪些内容
-  －　工程师端业务迭代开发很多需求，归总为一个业务目标就是让工程师操作更加规范和透明，让用户认可度和满意度得到提升。
-  －　重构了网点信息员和分中心两大模块，虽然没有原声那么好的体验，但是通过这样把各个模块整合起来，看起来更加完整，同时各个业务模块又是独占划分。
-  －　美的服务号的小程序开发，目前没有完全推广起来，待后面的厚积薄发。
+  －　工程师端业务迭代开发很多需求，按照我自己的理解，背后的意义其实归总起来为一个业务目标就是让工程师操作更加规范和透明，能够更加高效准确的解决用户的需求，让用户认可度和满意度得到提升。
+  －　重构了网点信息员和分中心两大模块，虽然没有原声那么好的体验，但是通过这样把各个零散的模块整合起来，看起来更加完整，同时各个业务模块又是独占划分，各司其职。
+  －　美的服务号和小程序，参与了其中一部分的开发，目前维护以及需求迭代主要还是以服务号为主，小程序的内容后期会逐渐同步过去，期待后面的厚积薄发。
   
-　###  
+###  所面临的问题
+1、小需求太多，一个开发同时兼任多个需求的同时开发，同时会议也很多，需求会议到需求开发，这中间具体的开发人员可能并没有时间去开会，而是基本通过我去传达需求信息，这中间就会存在信息传达不到位的情况，怎样降低这种信息丢失的风险，同时又能高效的沟通。
+2、团队的协作规范不成体系，没有统一的操作手册，大家都是各自的风格，这样在项目承接上下游会多很多沟通成本，对于管理起来也是比较痛苦的，所以制定统一的规范原则迫在眉睫。
+3、个人工作时间经常被打断，不能进行高效的创造，总结问题的原因，制定通过的模板对外输出，比如说经常找我要最新的底座版本。比如经常被运维询问关于业务方面的问题。
+### 我的解决方案
