--- a/简历以及面试技巧/转正报告.md
+++ b/简历以及面试技巧/转正报告.md
@@ -16,12 +16,24 @@
   5、只有到了晚上才能安静下来coding不被打扰
 
   ###　这半年我做的哪些内容
-  －　工程师端业务迭代开发很多需求，按照我自己的理解，背后的意义其实归总起来为一个业务目标就是让工程师操作更加规范和透明，能够更加高效准确的解决用户的需求，让用户认可度和满意度得到提升。
-  －　重构了网点信息员和分中心两大模块，虽然没有原声那么好的体验，但是通过这样把各个零散的模块整合起来，看起来更加完整，同时各个业务模块又是独占划分，各司其职。
-  －　美的服务号和小程序，参与了其中一部分的开发，目前维护以及需求迭代主要还是以服务号为主，小程序的内容后期会逐渐同步过去，期待后面的厚积薄发。
+  -　工程师端业务迭代开发很多需求，按照我自己的理解，背后的意义其实归总起来为一个业务目标就是让工程师操作更加规范和透明，能够更加高效准确的解决用户的需求，让用户认可度和满意度得到提升。
+  -　重构了网点信息员和分中心两大模块，虽然没有原声那么好的体验，但是通过这样把各个零散的模块整合起来，看起来更加完整，同时各个业务模块又是独占划分，各司其职。
+  -　美的服务号和小程序，参与了其中一部分的开发，目前维护以及需求迭代主要还是以服务号为主，小程序的内容后期会逐渐同步过去，期待后面的厚积薄发。
+  - 优化项目构建体积和速度。平均每个H5包的构建速度提升50%，以前要一分半中，现在需要60-80s之间。一个项目构建少了60*15*30*12/(60*60)=90个小时 人天90/8=11.25天。关于流量节省方面(8*1.5*140000*2)/1024 = 3281G 每月节省这么多流量。 我希望以后自己在这方面能够做出更多的优化，不仅提升的是自身的能力，提升的也是整个团队的效率，然后其实团队背后就能够承担更多的任务，个人提升效率之后，其实就会有更多的时间用到提升到自己的技能，一个人进步并不代表什么，整个团队进步才是真正的进步。
   
 ###  所面临的问题
 1、小需求太多，一个开发同时兼任多个需求的同时开发，同时会议也很多，需求会议到需求开发，这中间具体的开发人员可能并没有时间去开会，而是基本通过我去传达需求信息，这中间就会存在信息传达不到位的情况，怎样降低这种信息丢失的风险，同时又能高效的沟通。
+####  解决方案
+  - 完善原型图，理清所有交互逻辑，从开发开始就降低错误。
+  - 交接任务后，一对一讲解一遍。特别是迭代开发，开发前就要弄清楚上下游的业务背景和业务逻辑。同时叮嘱开发，看明白原型图以及需求文档再动手开发（大部分问题是开发者没有看懂开发需求描述，就按照自己的理解开发，一开始就犯了错误，从而提高了开发成本）。
+  - 开发复杂的需求时，带上原开发者一起参加需求会议以及测试用例会议。
+  
 2、团队的协作规范不成体系，没有统一的操作手册，大家都是各自的风格，这样在项目承接上下游会多很多沟通成本，对于管理起来也是比较痛苦的，所以制定统一的规范原则迫在眉睫。
-3、个人工作时间经常被打断，不能进行高效的创造，总结问题的原因，制定通过的模板对外输出，比如说经常找我要最新的底座版本。比如经常被运维询问关于业务方面的问题。
-### 我的解决方案
+#### 解决方案
+ - 前期先输出前端代码规范和代码管理以及提交规范，输出书面文档。
+ - 小组沟通协商达成一致，后期慢慢按照文档规范作业，同步新增修改文档。
+
+### 下个季度的工作规划
+1、最重要的肯定是满足业务的需求，掌握好项目的进度和质量。
+2、制定好前端代码规范和代码管理以及提交规范,初步实施起来。
+3、
