--- a/简历以及面试技巧/转正报告.md
+++ b/简历以及面试技巧/转正报告.md
@@ -1,8 +1,5 @@
-1、试用期工作内容/心得体会；2、发现的问题及建议；3、以往公司值得借鉴经验与公司当前情况相结合的建议；4、工作计划（写下一季度工作计划）
-
-【选择汇报内容】（以下内容不做强制要求汇报，也可根据自己的情况选择性的阐述一些内容）】1、个人优势及不足；2、如何更好更有效的跨部门沟通工作
 ###  先说下我自己的故事
-  >我的情况对比大部分可能特殊点，我是乙方转内的，转之前已经在客服项目组差不多工作两年，我接手那边的项目时，杰哥还没来带队，后来杰哥和海洋带着大部队过来客服支援，从此客服项目组就算成立了，在乙方的两年时间里特别要感谢杰哥对我技术的指导，能让我快速的成长起来，同时也要感谢海洋，能够信任的把一些管理的事情分配给我，让我有了除了coding 之外其他能够实践的机会。
+  我的情况对比大部分可能特殊点，我是乙方转内的，转之前已经在客服项目组差不多工作两年，我接手那边的项目时，杰哥还没来带队，后来杰哥和海洋带着大部队过来客服支援，从此客服项目组就算成立了，在乙方的两年时间里特别要感谢杰哥对我技术的指导，能让我快速的成长起来，同时也要感谢海洋，能够信任的把一些管理的事情分配给我，让我有了除了coding 之外其他能够实践的机会。
 
 ### 同一个环境不同的角色
 - 乙方的职责
@@ -16,25 +13,29 @@
   4、比较复杂的项目，需要写好设计文档
   5、只有到了晚上才能安静下来coding不被打扰
 
-  ###　这半年我做了哪些事情
-  -　工程师端业务迭代开发很多需求，按照我自己的理解，背后的意义其实归总起来为一个业务目标就是让工程师操作更加规范和透明，能够更加高效准确的解决用户的需求，让用户认可度和满意度得到提升。
-  -　重构了网点信息员和分中心两大模块，虽然没有原声那么好的体验，但是通过这样把各个零散的模块整合起来，使用起来更加完整和明确，把每个角色公用的模块整合起来，同时各个业务模块又是独自H5分离开来，分别升级和迭代，相互之间没有影响。
-  -　美的服务号和小程序，参与了其中一部分的开发，目前维护以及需求迭代主要还是以服务号为主，小程序的内容后期会逐渐同步过去，期待后面的厚积薄发。
-  - 优化项目构建体积和速度。每个H5包的构建速度提升40-50%，以前打包一个项目需要大概60-100s之间，现在需要30-60s之间。平均算下来一个项目至少节省了一个项目构建少了35s左右，35s*15次/天*250(一年的工作日)/(60s*60min)=36个小时 一年节省了人天36.5/8=4.5天。关于流量节省方面(8个包*1.5M*140000人*2次/月)/1024M = 3281G 每月节省这么多流量，每年大概会节省3281G*12月/1024G = 38T流量。 我希望以后自己在这方面能够做出更多的优化，不仅提升的是自身的能力，提升的也是整个团队的效率，然后其实团队背后就能够承担更多的任务，个人提升效率之后，其实就会有更多的时间用到提升到自己的技能上面。
+
+###　这半年我做了哪些事情
+-　工程师端业务迭代开发很多需求，按照我自己的理解，背后的意义其实归总起来为一个业务目标就是让工程师操作更加规范和透明，能够更加高效准确的解决用户的需求，让用户认可度和满意度得到提升。
+
+-　重构了网点信息员和分中心两大模块，也做成了和工程师这种类似的效果，虽然没有原声那么好的体验，但是通过这样把各个零散的模块整合起来，使用起来更加完整和明确，把每个角色公用的模块整合起来，同时各个业务模块又是独自H5分离开来，分别升级和迭代，他们相互之间没有影响。
+-　美的服务号和小程序，参与了其中一部分的开发，目前维护以及需求迭代主要还是以服务号为主，小程序的内容后期会逐渐同步过去，期待后面的厚积薄发。
+
+- 优化项目构建体积和速度。每个H5包的构建速度提升40-50%，以前打包一个项目需要大概60-100s之间，现在需要30-60s之间。平均算下来一个项目至少节省了一个项目构建少了35s左右，35s*15次/天*250(一年的工作日)/(60s*60min)=36个小时 一年节省了人天36.5/8=4.5天。关于流量节省方面(8个包*1.5M*140000人*2次/月)/1024M = 3281G 每月节省这么多流量，每年大概会节省3281G*12月/1024G = 38T流量。 我希望以后自己在这方面能够做出更多的优化，不仅提升的是自身的能力，提升的也是整个团队的效率，然后其实团队背后就能够承担更多的任务，个人提升效率之后，其实就会有更多的时间用到提升到自己的技能上面。
   
 ###  所面临的问题
-1、小需求太多，一个开发同时兼任多个需求的同时开发，同时会议也很多，需求会议到需求开发，这中间具体的开发人员可能并没有时间去开会，而是基本通过我去传达需求信息，这中间就会存在信息传达不到位的情况，怎样降低这种信息丢失的风险，同时又能高效的沟通。
-####  解决方案
-  - 完善原型图，理清所有交互逻辑，从开发开始就降低错误。
-  - 交接任务后，一对一讲解一遍。特别是迭代开发，开发前就要弄清楚上下游的业务背景和业务逻辑。同时叮嘱开发，看明白原型图以及需求文档再动手开发（大部分问题是开发者没有看懂开发需求描述，就按照自己的理解开发，一开始就犯了错误，从而提高了开发成本）。
+1、客服需求比较多，一个开发同时兼任多个需求的同时开发，同时会议也很多，需求会议到需求开发，这中间具体的开发人员可能并没有时间去开会，而是基本通过我去传达需求信息，这中间就会存在信息传达不到位的以及关键信息丢失的情况，还有在讲解的时候理解角度问题所产生的误导，怎样降低这种信息丢失的风险，同时又能高效的沟通。
+ **解决方案**
+  - 每个需求建立confluence项目，完善原型图，理清所有交互逻辑，所有的细节改动及时同步到confluence，从一开始就降低错误。
   - 开发复杂的需求时，带上原开发者一起参加需求会议以及测试用例会议。
-  
-2、团队的协作规范不成体系，没有统一的操作手册，大家都是各自的风格，这样在项目承接上下游会多很多沟通成本，对于管理起来也是比较痛苦的，所以制定统一的规范原则迫在眉睫。
-#### 解决方案
- - 前期先输出前端代码规范和代码管理以及提交规范，输出书面文档。
+  - 交接任务后，一对一讲解一遍。特别是迭代开发，开发前就要弄清楚上下游的业务背景和业务逻辑。同时叮嘱开发，看明白原型图以及需求文档再动手开发（大部分问题是开发者没有看懂开发需求描述，就按照自己的理解开发，一开始就犯了错误，从而提高了开发成本）。
+ 
+2、目前团队的协作规范基本都是从已有的项目传承下来，并没有形成统一的操作手册，所以在实际开发项目时大家都是各自的编码风格，这样在项目承接上下游会多很多沟通成本，对于管理起来也是比较痛苦的，所以制定统一的规范原则迫在眉睫。
+**解决方案**
+ - 前期先输出前端代码规范和代码管理以及提交规范，输出书面文档，这里我也和方晨和海峰沟通了，他们也需要形成统一的规范，这个到时候一起沟通制定出规范样本。
  - 小组沟通协商达成一致，后期慢慢按照文档规范作业，同步新增修改文档。
+ - 需要定期实行code review,大家一起取长补短。
 
 ### 下个季度的工作规划
-1、最重要的肯定是满足业务的需求，掌握好项目的进度和质量。
+1、业务需求：最重要的肯定是满足业务的需求，业务需求就是生命线，提出合理的设计建议，掌握好项目的进度和质量。
 2、制定好前端代码规范和代码管理以及提交规范,让小组成员实践行动起来。
 3、维护好组件库的开发，与UI协商好规范（让UI之间的设计风格尽量统一，避免同样一个功能出现两种不同的设计风格，以此避免重复开发，提高开发效率），日常开发中多提炼高复用组件，避免重复开发。
