--- a/简历以及面试技巧/转正报告.md
+++ b/简历以及面试技巧/转正报告.md
@@ -10,7 +10,7 @@
   1、有了很多的评审会议要参加
   2、白天被产品和业务以及UI追问着这个需求能不能实现
   3、需要合理分配分解好手头上的工作以及攻克优化技术阻碍点
-  4、比较复杂的项目，需要写好设计文档
+  4、比较复杂的项目，需要写好设计文
   5、只有到了晚上才能安静下来coding不被打扰
 
 
